# AgroTechAI

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  sonar-project.properties  template.yaml
.github/actions/docker-push/: action.yml
.github/actions/javascript-tests/: action.yml
.github/actions/python-tests/: action.yml
.github/actions/static-analysis/: action.yml
.github/workflows/: ci.yml  ci_cd_main.yml  ci_features.yml  ci_main.yml  pr_features.yml  production-release.yml
client/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  ImageUpload.jsx  ScenarioForm.jsx  app.jsx  app_eli.jsx  index.html  main.jsx  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/components/: ImageUpload.jsx  ScenarioForm.jsx  app.jsx
client/src/utils/: websocket-config.js  websocket-utils.js
client/tests/: test-setup.js  test-styles.css
client/tests/integration/: websocket-communication.test.jsx
client/tests/unit/: App.test.jsx  ImageUpload.test.jsx  ScenarioForm.test.jsx  websocket-config.test.js  websocket-utils.test.js
docs/distillate-design-thinking/: README.md  agrotech_print_version.html
docs/distillate-design-thinking/1_research/: 1_arquetipo_general.md  1_arquetipo_resultado.md  2_systemmaps-as-is_general.md  2_systemmaps-as-is_resultado.md  3_journeymaps-as-is_general.md  3_journeymaps-as-is_resultado.md
docs/distillate-design-thinking/1_research/guia/: 1_arquetipos_ia_agricola.md  2_system_maps_as-is_ia_agricola.md  3_journey_maps_as-is_ia_agricola.md
docs/distillate-design-thinking/2_functional_design/: 1_jtbd_general.md  1_jtbd_resultado.md  2_def_y_select_func_general.md  2_def_y_select_func_resultado.md  3_def_specs_general.md  3_def_specs_resultado.md
docs/distillate-design-thinking/2_functional_design/guia/: 1_jobs_to_be_done.md  2_def_y_sel_funcionalidades.md  3_definicion_specs.md
docs/distillate-design-thinking/3_content_design/: 1_arquitectura_informacion_general.md  1_arquitectura_informacion_resultado.md
docs/distillate-design-thinking/3_content_design/guia/: 1_arq_informacion.md
docs/distillate-design-thinking/4_cx_ux_design/: 1_wireframing_general.md  1_wireframing_resultado.md
docs/distillate-design-thinking/4_cx_ux_design/guia/: 1_flujos_app.md
docs/distillate-design-thinking/5_ui_design/: 1_prototipo_general.md
docs/distillate-design-thinking/5_ui_design/guia/: 1_prototipos.md
env-deployment/: Dockerfile  docker-compose.yml  nginx.conf  pull-models.sh  supervisord.conf
server/: .dockerignore  Dockerfile  agents.py  main.py  ollama_client.py  pylint-report.txt  pyproject.toml  requirements.txt  websocket_handler.py
server/agrotech_ai/: __init__.py  agents.py  app.py  ollama_client.py  websocket_handler.py
server/tests/: conftest.py  test_runner.py  utils.py
server/tests/integration/scenarios/: test_full_analysis_scenarios.py
server/tests/integration/websocket/: test_websocket_handler.py
server/tests/unit/agents/: test_agricultural_agents.py  test_image_vision_agent.py  test_ollama_client.py
server/tests/unit/api/: test_main.py
